--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Welcome to waelexpress</title>
 </head>
 <body>
+	<div>
+		<a href ="#"></a>
+	</div>
 
+	<div>
+		<a href="{{url_for('homepage')}}">home</a>
+	</div>
 
+	<div>
+		<a href="{{url_for('store')}}">store</a>
 </body>
 </html>
