--- a/templates/home.html
+++ b/templates/home.html
@@ -4,15 +4,18 @@
 	<title>Welcome to waelexpress</title>
 </head>
 <body>
+	<div>	
+		<a href="#"></a>
+	</div>
 	<div>
-		<a href ="#"></a>
+		<a href="/home">home</a>
 	</div>
 
 	<div>
-		<a href="{{url_for('homepage')}}">home</a>
+		<a href="/store">Store</a>
 	</div>
 
-	<div>
-		<a href="{{url_for('store')}}">store</a>
+
+
 </body>
 </html>
