--- a/templates/about.html
+++ b/templates/about.html
@@ -2,9 +2,49 @@
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet" type="text/css" href="{{url_for('static', filename='about.css')}}">
 </head>
 <body>
+	 <div class="row">
+  <div class="column">
+    <div class="card">
+      <img src="img1.jpg" alt="Jeff" style="width:100%">
+      <div class="container">
+        <h2>Jeff Bezos</h2>
+        <p class="title">CEO &amp; Founder</p>
+        <p>Hi its me.</p>
+        <p>jeffbezos@gmail.com</p>
+        <p><button class="button">Contact</button></p>
+      </div>
+    </div>
+  </div>
 
+  <div class="column">
+    <div class="card">
+      <img src="img2.jpg" alt="Mike" style="width:100%">
+      <div class="container">
+        <h2>Waael</h2>
+        <p class="title">Big boss</p>
+        <p>i'm a beasttt</p>
+        <p>waelhashem@gmail.com</p>
+        <p><button class="button">Contact</button></p>
+      </div>
+    </div>
+  </div>
+
+  <div class="column">
+    <div class="card">
+      <img src="img3.jpg" alt="John" style="width:100%">
+      <div class="container">
+        <h2>George Allawi </h2>
+        <p class="title">Designer</p>
+        <p>i'm the beast's friend </p>
+        <p>g.alawi2003@gmail.com</p>
+        <p><button class="button">Contact</button></p>
+      </div>
+    </div>
+  </div>
+</div> 
 
 </body>
 </html>
