--- a/templates/home.html
+++ b/templates/home.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Welcome to waelexpress</title>
+	<title>Let's shop</title>
 </head>
 <body>
 	<div>	
 		<a href="#"></a>
 	</div>
 	<div>
-		<a href="/home">home</a>
+		<a href=" {{url_for('homepage')}} ">Home</a>
 	</div>
-
 	<div>
-		<a href="/store">Store</a>
+		<a href=" {{url_for('store')}} ">Store & Shop</a>
 	</div>
-
-
-
+	<div>
+		<a href="{{url_for('cart')}}">Cart</a>
+	</div>
+	<div>
+		<a href=" {{url_for('about')}} ">About</a>
+	</div>
 </body>
 </html>
