--- a/templates/store.html
+++ b/templates/store.html
@@ -1,21 +1,19 @@
+ 
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Waelexpress</title>
-	<style>
-		.card {
+  <style >
+    .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   max-width: 300px;
   margin: auto;
   text-align: center;
   font-family: arial;
 }
-
 .price {
   color: grey;
   font-size: 22px;
 }
-
 .card button {
   border: none;
   outline: 0;
@@ -27,14 +25,25 @@
   width: 100%;
   font-size: 18px;
 }
-
 .card button:hover {
   opacity: 0.7;
 }
-</style>
-
+  </style>
+  <title></title>
 </head>
 <body>
+  <h2>
+    Welcome To Waelexpress.
+    To go back to home page click <a href="/">here</a>
+
+  </h2>
+<div class="card">
+  <img src="mansaf.jpg" alt="Buy mansaf!" style="width:100%">
+  <h1>Mansaf</h1>
+  <p class="price">$20.00</p>
+  <p>Tastiest mansaf you'll ever eat!</p>
+  <p><button> <a href="/cart">Add to Cart</a></button></p>
+</div> 
 
 </body>
 </html>
